user feedback feature

--- a/rizz-v/package.json
+++ b/rizz-v/package.json
@@ -17,7 +17,7 @@
     "commands": [
       {
         "command": "rizz-v.helloWorld",
-        "title": "Hello"
+        "title": "Rating"
       }
     ]
   },
